--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: ruby
-rvm:
- - 2.2
- - jruby
+language: android
+android:
+  components:
+    - build-tools-26.0.2
+    - android-28
+    - extra
