--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    buildToolsVersion "27.0.3"
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.app.alexseguin.travislauncher"
