--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+branches:
+  only:
+      - master
+      
 language: android
 android:
   components:
-    - build-tools-26.0.2
+    - build-tools-28.0.3
     - android-28
-    - extra
+    
