--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ android:
     - build-tools-28.0.3
     - android-28
     
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
