--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ android:
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     
 before_script:
-- echo no | android create avd --force -n test -t android-28 --abi google_apis/armeabi-v7a
+- echo no | android create avd --force -n test -t android-28 --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
