--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ android:
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 before_script:
     # Launch emulator before the execution
-    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a
-    - emulator -avd test -no-audio -no-window &
+    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a 
+    - emulator -avd test -no-audio -no-window -engine classic &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
