--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ android:
 before_script:
     # Launch emulator before the execution
     - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a 
-    - emulator -avd test -no-audio -no-window &
+    - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
