--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+before_script:
+    - yes | sudo sdkmanager --licenses
 
 script:
     - ./gradlew build check
