--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ android:
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 before_script:
-    - y | android update sdk --no-ui --filter build-tools-24.0.0,android-24,extra-android-m2repository
+    - yes | android update sdk --no-ui --filter build-tools-24.0.0,android-24,extra-android-m2repository
 
 script:
     - ./gradlew build check
