--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ android:
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 before_install:
 - yes | sdkmanager "platforms;android-25"
+- yes | sdkmanager "platforms;android-26"
+- yes | sdkmanager "platforms;android-27"
+- yes | sdkmanager "platforms;android-28"
 
 script:
     - ./gradlew build check
